# otus-nosql

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
infra/clickhouse/: docker-compose.yml
infra/minio/: docker-compose.yml
infra/mongodb/: docker-compose.yml
infrastructure/clickhouse/: docker-compose.yml
infrastructure/minio/: docker-compose.yml
infrastructure/mongodb/: docker-compose.yml
notebooks/: 01_S3_Minio.ipynb  01_S3_YandexCloud.ipynb  02_S3_Minio.ipynb  02_S3_YandexCloud.ipynb  03_ClickHouse.ipynb  03_MongoDB.ipynb  04_ClickHouse.ipynb  04_MongoDB.ipynb  clickhouse.ipynb  mongodb.ipynb  s3-yandex.ipynb  work.ipynb
